Fix bug in XML autoindenter. When pasting a smaller file over a larger one, processSection() is actually called for each line in the larger file, despite the fact that some of these lines may no longer exist.

Therefore, the patch catches this case and ensures that it cannot happen
(otherwise we dereference a null pointer).

BUG: 92284

svn path=/trunk/kdelibs/kate/; revision=358881